--- a/sample.html
+++ b/sample.html
@@ -102,11 +102,33 @@ the clothes we love come from and feel like
 you should know too.</p>
       </article>
 </section>
-
 </div>
+
+<div id="co">
+    <hr style="width:90%;">
+<section id="con">
+  <ul>
+    <li><h6>ABOUT THREE DOTS</h6>
+        <p><a href="#">About Us</a></p>
+        <p><a href="#">Contact</a></p></li>
+    <li><h6>CUSTOMER SERVICE</h6>
+        <p><a href="#">Shipping Information</a></p>
+        <p><a href="#">Returns</a></p>
+        <p><a href="#">Gifts Cards</a></p>
+        <p><a href="#">Wholesale</a></p>
+        <p><a href="#">FAQ</a></p></li>
+    <li><h6>MY ACCOUNT</h6>
+        <p><a href="#">Account</a></p>
+        <p><a href="#">Order History</a></p>
+        <p><a href="#">My Cart</a></p></li>
+    <li><h6>STORE LOCATION</h6></li>
+  </ul>
+</section>
+</div>
+
   <div >
     <footer id="footer" class="clear">
-      <hr style="width:85%">
+      <hr style="width:90%">
       <img src="images/logo-text.png" alt="">
       <nav>
         <a href="#">Privacy Policy</a> |
