--- a/sample.html
+++ b/sample.html
@@ -6,20 +6,19 @@
   <title>Sample Page</title>
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
 </head>
-<body>
+<body >
   <div>
     <header id="header" class="clear">
-      <div id="hgroup">
+     <div id="hgroup">
         <p>FREE STANDARD DOMESTIC SHIPPING WITHIN UNITED STATES</p>
         <div id="na">
-        search<img src="images/search.png"  width="16" height="16" alt="">
-        account<img src="images/account.png"  width="16" height="16" alt="">
-        cart<img src="images/cart.png" width="16" height="16" alt="">
+          <span style="font-size:16px;">search</span><img src="images/search.png"  width="14" height="14" alt="">&nbsp;
+          <span style="font-size:16px;">account</span><img src="images/account.png"width="14" height="14"  alt="">&nbsp;
+          <span style="font-size:16px;">cart</span><img src="images/cart.png" width="14" height="14" alt="">
         </div>
         <div id="logo">
-        <img src="images/logo-text.png" alt="">
+          <img src="images/logo-text.png" alt="">
         </div>
-      </div>
       <nav>
         <ul>
           <li>
@@ -45,83 +44,141 @@
           </li>
         </ul>
       </nav>
+     </div>
     </header>
   </div>
-
-  <div >
-    <div id="container" class="clear">
-      <!-- Slider -->
+  <br><br><br>
+<div id="container" class="clear">
+  <!-- Slider -->
+  <div class="content">
+    <div class="left">
+      <img src="images/main-img2.png" width=80% height=auto alt="">
+      <img src="images/main-img3.png" width=80% height=auto alt="">
+      <img src="images/main-img4.png" width=80% height=auto alt="">
+    </div>
+    <div class="middle">
       <section id="slider">
-          <img src="images/main-img1.png" alt="">
-          <img src="images/main-img2.png" alt="">
-          <img src="images/main-img3.png" alt="">
-          <img src="images/main-img4.png" alt="">
+            <img src="images/main-img1.png" width=80% height=auto alt="">
+            <img src="images/main-img3.png" width=80% height=auto alt="">
+
       </section>
-      <hr>
-    <figure>
+    </div>
+    <div class="right">
+      <h3>SEER JERSEY OFF SHOULDER TOP <br><br>$100.00</h3><br><br>
+      <span id="c">WHITE</span><br><br>
+      <button class="button button1" name="button" > </button>  &nbsp; &nbsp;<button class="button button2" name="button"></button>
+      <br><br><br><br>
+      <span id="size" style="text-decoration:underline;">SIZE GUIDE</span><br><br>
+        <button class="button button4" name="button" >XS</button>
+         &nbsp;  &nbsp;<button class="button button3" name="button" style="border: solid lightgrey 1px;"> S </button>
+         &nbsp; &nbsp;<button class="button button3" name="button" >M</button>
+         &nbsp; &nbsp;<button class="button button3" name="button" >L</button>
+         &nbsp; &nbsp;<button class="button button4" name="button" >XL</button><br><br>
+         &nbsp; &nbsp;<button class="button" name="button" style="width:100%;" > ADD TO BAG </button><br><br>
+
+       &nbsp;<button class="button button3" name="button" style="width:100%;border-radius:0 0;border: solid lightgrey 1px;" > SAVE FOR LATER </button><br>
+      <br><h3>FREE SHIPPING - EASY RETURNS</h3><br><br>
+      <b style="font-size:15px;left:0;">DETAILS</b>
       <ul>
-      <li><img src="images/might-like1.png" alt="">
-      <figcaption>SANDED JERSY MUSCLE TANK</figcaption>$70.00</li>
-      <li><img src="images/might-like2.png" alt="">
-      <figcaption>HERITAGE KNIT CARDINAG</figcaption>$70.00</li>
-      <li><img src="images/might-like3.png" alt="">
-      <figcaption>SLEEVELESS COWL TANK</figcaption>$70.00</li>
-    </ul>
-    </figure>
-  </section>
+        <li>Relaxed Fit</li>
+        <li>Made in the USA</li>
+        <li>Model is 5'9 wearing size S</li>
+        <li>100% Tencel</li>
+        <li> 19" Shoulder to hem</li>
+        <li> Dry Clean Recommended. Machine wash inside out gentle cycle, cold water, no bleach. Tumble dry lw. Cool iron.</li>
+        <li># KR 1445W</li>
+      </ul>
     </div>
   </div>
-
+    <br><br>
+  <section id="bottom">
+    <div class="botto">
+      <br><br>
+      <hr id="h">
+      <h3 id="m">PRODUCTS YOU MIGHT LIKE</h3>
+      <hr id="h">
+      <br><br>
+      <nav>
+       <figure>
+        <ul>
+        <li><img src="images/might-like1.png" width=358px height=446px  alt="">
+          <figcaption>SANDED JERSY MUSCLE TANK</figcaption>$70.00</li>
+        <li><img src="images/might-like2.png" width=358px height=446px alt="">
+          <figcaption>HERITAGE KNIT CARDINAG</figcaption>$70.00</li>
+        <li><img src="images/might-like3.png" width=358px height=446px alt="">
+          <figcaption>SLEEVELESS COWL TANK</figcaption>$70.00</li>
+        </ul>
+       </figure>
+      </nav>
+   </div>
+  </section>
+</div>
   <!-- main content -->
-  <div id="homepage">
+<div id="homepage">
+
     <!-- services area -->
     <section id="services" class="clear">
       <article class="fl_left" >
-        <strong>Our Mission</strong>
+        <strong style="font-size:16px">Our Mission</strong>
         <p>As a company, we're a lot like you, seasoned
-enough to know what you're looking for, stylish
-enough to look for what's next. We believe no
-woman wants to be basic, but every woman
-wants great basics. With the luxury of comfort
-and effortless style, we go "Beyond the Basics,"
-because you're anything but. Some things never
-change, but there's always more to come...</p>
-</article>
-  <article class="fl_right">
+          enough to know what you're looking for, stylish
+          enough to look for what's next. We believe no
+          woman wants to be basic, but every woman
+          wants great basics. With the luxury of comfort
+          and effortless style, we go "Beyond the Basics,"
+          because you're anything but. Some things never
+          change, but there's always more to come...</p>
+      </article>
+      <article class="fl_right">
 
-        <strong>Local Production</strong>
+        <strong style="font-size:16px">Local Production</strong>
 
         <p>As a Southern California-based brand, Three
-Dots prides itself on being made in the USA.
-With 95% of our clothing created at our corpo-
-rate office, we believe ih transparency every
-step of the way. Each piece created and pro
-duced in-house allows for hands-on care from
-first sketch to last stitch. We like to know where
-the clothes we love come from and feel like
-you should know too.</p>
+          Dots prides itself on being made in the USA.
+          With 95% of our clothing created at our corpo-
+          rate office, we believe ih transparency every
+          step of the way. Each piece created and pro
+          duced in-house allows for hands-on care from
+          first sketch to last stitch. We like to know where
+          the clothes we love come from and feel like
+          you should know too.</p>
       </article>
-</section>
+    </section>
 </div>
+<div style="width:100%;height:30px;background-color:white;float:left;">
+</div>
+<div id="navbar">
 
-<div id="co">
     <hr style="width:90%;">
-<section id="con">
+
+<section id="innernavbar">
+
+  <form class="mail" style="font-size:16px;" action="" method="post">
+        sign up for mailing list &nbsp;&nbsp;<input type="email" value="your email address "> &nbsp;&nbsp;<button type="button" name="sign up">sign up</button>
+  <nav>
+    stay connected&nbsp;&nbsp;
+    <a href="#"><img src="images/social/insta.png" width="auto" height="16" alt=""></a>&nbsp;
+    <a href="#"><img src="images/social/facebook.png" width="auto" height="16" alt=""></a>&nbsp;
+    <a href="#"><img src="images/social/pintrest.png" width="auto" height="16" alt=""></a>&nbsp;
+    <a href="#"><img src="images/social/twitter.png" width="auto" height="16" alt=""></a>&nbsp;
+    <a href="#"><img src="images/social/youtube.png" width="auto" height="16" alt=""></a>&nbsp;
+  </nav>
+</form>
   <ul>
-    <li><h6>ABOUT THREE DOTS</h6>
+    <li><h3>ABOUT THREE DOTS</h3>
         <p><a href="#">About Us</a></p>
         <p><a href="#">Contact</a></p></li>
-    <li><h6>CUSTOMER SERVICE</h6>
+    <li><h3>CUSTOMER SERVICE</h3>
         <p><a href="#">Shipping Information</a></p>
         <p><a href="#">Returns</a></p>
         <p><a href="#">Gifts Cards</a></p>
         <p><a href="#">Wholesale</a></p>
         <p><a href="#">FAQ</a></p></li>
-    <li><h6>MY ACCOUNT</h6>
+    <li><h3>MY ACCOUNT</h3>
         <p><a href="#">Account</a></p>
         <p><a href="#">Order History</a></p>
         <p><a href="#">My Cart</a></p></li>
-    <li><h6>STORE LOCATION</h6></li>
+    <li><h3>STORE LOCATION</h3></li>
   </ul>
 </section>
 </div>
