--- a/sample.html
+++ b/sample.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width;user-scalable-no;">
   <title>Sample Page</title>
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
 </head>
