--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width;user-scalable-no;">
   <title>Sample Page</title>
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
+  <link rel="stylesheet" href="styles/responsive.css" type="text/css">
 </head>
 <body >
   <div>
